<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/character_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/character_photo_no_image_description"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/character_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/character_photo_button_description"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/character_name_label" />

            <EditText
                android:id="@+id/character_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/character_name_hint" />

            <Button
                android:id="@+id/delete_character_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_character_button_label" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character_details_label" />

    <Button
        android:id="@+id/character_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed Nov 14 2018" />

    <Button
        android:id="@+id/character_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character_time_text" />

    <CheckBox
        android:id="@+id/character_pyro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character_pyro_label" />

    <CheckBox
        android:id="@+id/character_hydro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character_hydro_label" />

    <CheckBox
        android:id="@+id/character_electro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character_electro_label" />

    <CheckBox
        android:id="@+id/character_geo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character_geo_label" />

    <CheckBox
        android:id="@+id/character_anemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character_anemo_label" />

    <CheckBox
        android:id="@+id/character_cryo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character_cryo_label" />

    <CheckBox
        android:id="@+id/character_dendro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character_dendro_label" />

    <Button
        android:id="@+id/character_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character_owner_text" />

    <Button
        android:id="@+id/character_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character_report_text" />


</LinearLayout>